<resources>
    <string name="app_name">UniqueStyle</string>
    <string name="txt_sign_up_here">Signup here</string>
    <string name="txt_reset_password">Reset Password</string>
    <string name="txt_dont_have_an_account">Don\'t have an account?</string>
    <string name="txt_already_have_an_account">Already have an account?</string>
    <string name="registered_email">We just need your registered Email id to send your password reset instructions</string>
    <string name="txt_forgot_your_password">Forgot Your Password?</string>
    <string name="txt_forgot_my_password">Forgot my password</string>
    <string name="txt_sign_in">Sign In</string>
    <string name="txt_back_to_login_page">Back To Login Page</string>
    <string name="txt_sign_up">Sign Up</string>
    <string name="hint_username">Username</string>
    <string name="email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="hint_registered_email_id">Registered Email Id</string>
    <string name="hint_name">Name</string>
    <string name="sign_in_successfully">Sign In Successfully</string>
    <string name="sign_in_failed">Sign In Failed</string>
    <string-array name="country">
        <item>Pakistan</item>
        <item>India</item>
        <item>USA</item>
        <item>UAE</item>
        <item>Canada</item>
        <item>China</item>
        <item>United Kingdom</item>
        <item>Norway</item>
        <item>Japan</item>
        <item>Russia</item>
        <item>Brazil</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>