<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:tint="@color/black_faded"
        android:scaleType="centerCrop"
        android:src="@drawable/img_1" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp">

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/edt_username"
            android:adjustViewBounds="true"
            android:background="@color/white_faded"
            android:src="@drawable/img_ferrari_logo" />

        <EditText
            android:id="@+id/edt_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/edt_password"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="20dp"
            android:backgroundTint="@color/white_faded"
            android:drawableStart="@drawable/ic_nav_person_tinted"
            android:drawablePadding="20dp"
            android:hint="@string/hint_username"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/btn_sign_in"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="20dp"
            android:backgroundTint="@color/white_faded"
            android:drawableStart="@drawable/ic_nav_person_tinted"
            android:drawablePadding="20dp"
            android:hint="@string/hint_password"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn_sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/tv_forgot_password"
            android:textSize="20dp"
            android:padding="12dp"
            android:layout_marginTop="40dp"
            android:backgroundTint="@color/teal_700"
            android:text="@string/txt_signin"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/tv_forgot_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/v_signup"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="100dp"
            android:gravity="center"
            android:text="@string/txt_forgot_my_password"
            android:textColor="@color/teal_700"
            android:textSize="18sp" />

        <LinearLayout
            android:id="@+id/v_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="50dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/txt_dont_have_an_account"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/txt_sign_up_here"
                android:textColor="@color/teal_700"
                android:textSize="18sp" />
        </LinearLayout>

    </RelativeLayout>
</RelativeLayout>


