<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotPasswordActivity">

    <ImageView
        android:id="@+id/iv_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/img_1"
        android:tint="@color/black_faded" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_margin="@dimen/margin_20dp">

            <ImageView
                android:id="@+id/edt_ferrari_logo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_40dp"
                android:adjustViewBounds="true"
                android:background="@color/white_faded"
                android:src="@drawable/img_ferrari_logo" />

            <TextView
                android:id="@+id/tv_forgot_your_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edt_ferrari_logo"
                android:layout_marginTop="@dimen/margin_40dp"
                android:layout_marginBottom="@dimen/margin_10dp"
                android:gravity="center"
                android:padding="@dimen/font_size_20sp"
                android:text="@string/txt_forgot_your_password"
                android:textColor="@color/white"
                android:textSize="@dimen/font_size_20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/instruction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_forgot_your_password"
                android:layout_marginBottom="@dimen/margin_10dp"
                android:gravity="center"
                android:padding="@dimen/font_size_20sp"
                android:text="@string/registered_email"
                android:textColor="@color/white"
                android:textSize="@dimen/font_size_18sp" />

            <EditText
                android:id="@+id/edt_forgot_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/instruction"
                android:layout_marginBottom="@dimen/margin_40dp"
                android:drawableStart="@drawable/forgot_password_tint"
                android:hint="@string/hint_registered_email_id"
                android:inputType="textEmailAddress"
                android:padding="@dimen/font_size_20sp"
                android:textSize="@dimen/font_size_20sp" />

            <Button
                android:id="@+id/btn_reset_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edt_forgot_password"
                android:layout_marginBottom="@dimen/margin_20dp"
                android:backgroundTint="@color/teal_700"
                android:padding="@dimen/padding_12dp"
                android:text="@string/txt_reset_password"
                android:textSize="@dimen/font_size_20sp" />

            <TextView
                android:id="@+id/tv_back_to_login_page"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btn_reset_password"
                android:layout_marginBottom="@dimen/margin_40dp"
                android:gravity="center"
                android:text="@string/txt_back_to_login_page"
                android:textColor="@color/teal_700"
                android:textSize="@dimen/font_size_20sp" />
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>